# worldmonitor

./: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/: signal-monitor-full-pipeline-audit.md  v1.8-signal-operations-acceptance.md  v1.8.1-offline-signal-quality-root-cause.json  v1.8.1-offline-signal-quality-root-cause.md  v1.8.1-production-burn-in-baseline.md  v1.8.1-production-freeze.md  v1.8.1-production-signal-quality-audit.json  v1.8.1-production-signal-quality-audit.md  v1.8.1-supabase-backup-restore-drill.json  v1.8.1-supabase-backup-restore-drill.md
quant/: README.md  config.json  requirements-futu.txt
scripts/: analyze-signal-quality-offline.mjs  apply-shadow-migration.ts  apply-source-posts-compatibility-staging.ts  assert-safe-shadow.ts  assert-safe-staging.ts  audit-production-signals.mjs  cleanup-staging-test-data.ts  configure-vercel-preview-staging.ts  evaluate-research-tracking-v2.ts  export-supabase-backup.mjs  generate-shadow-stability-report.ts  provision-browser-staging-fixture.ts  provision-staging-test-user.ts  restore-supabase-backup-drill.mjs  run-production-shadow-replay.ts  run-research-staging-e2e.ts  run-staging-migration-drill.ts  seed-v18-staging-fixture.ts  shadow-cli.ts  (+5 more)
services/futu-bridge/: README.md  pyproject.toml
services/futu-bridge/src/futu_bridge/: __init__.py  __main__.py  app.py  audit.py  config.py  errors.py  futu_client.py  models.py  notifications.py  risk.py  snapshot.py  trading.py
services/futu-bridge/tests/: test_bridge.py
src/app/: page.tsx  (+2 more)
(+222 files in other folders)
